Set Telegram message format to html

--- a/docker-monitoring/Jenkinsfile
+++ b/docker-monitoring/Jenkinsfile
@@ -71,12 +71,12 @@ pipeline {
         success {
             script {
                 if (deployExecuted) {
-                    def message = "✅ *Monitoring Deploy Success*\n" +
+                    def message = "✅ <b>Monitoring Deploy Success</b>\n" +
                                   "Job: ${env.JOB_NAME}\n" +
                                   "Build: #${env.BUILD_NUMBER}\n" +
                                   "Stack: ${env.DOCKER_STACK_NAME}\n" +
                                   "URL: ${env.BUILD_URL}"
-                    telegram.sendMessage(env.TELEGRAM_BOT_TOKEN, env.TELEGRAM_CHAT_ID, message)
+                    telegram.sendMessage(env.TELEGRAM_BOT_TOKEN, env.TELEGRAM_CHAT_ID, message, HTML)
                 } else {
                     echo "Deploy stack was not executed, skipping Telegram notification."
                 }
@@ -84,12 +84,12 @@ pipeline {
         }
         failure {
             script {
-                def message = "❌ *Monitoring Deploy Failed*\n" +
-                              "Job: ${env.JOB_NAME}\n" +
-                              "Build: #${env.BUILD_NUMBER}\n" +
-                              "Stack: ${env.DOCKER_STACK_NAME}\n" +
-                              "URL: ${env.BUILD_URL}"
-                telegram.sendMessage(env.TELEGRAM_BOT_TOKEN, env.TELEGRAM_CHAT_ID, message)
+                def message = "❌ <b>Monitoring Deploy Failed</b>\n" +
+                          "Job: ${env.JOB_NAME}\n" +
+                          "Build: #${env.BUILD_NUMBER}\n" +
+                          "Stack: ${env.DOCKER_STACK_NAME}\n" +
+                          "URL: <a href='${env.BUILD_URL}'>Link</a>"
+                telegram.sendMessage(env.TELEGRAM_BOT_TOKEN, env.TELEGRAM_CHAT_ID, message, HTML)
             }
         }
         always {
