--- a/docker-monitoring/prometheus/prometheus.yml
+++ b/docker-monitoring/prometheus/prometheus.yml
@@ -71,6 +71,53 @@ scrape_configs:
       - source_labels: [__meta_dockerswarm_node_id]
         target_label: node_id
 
+  - job_name: "dockerswarm-cloud"
+    dockerswarm_sd_configs:
+      - host: tcp://10.163.1.5:2375
+        role: tasks
+    relabel_configs:
+      # Only keep containers that should be running.
+      - source_labels: [__meta_dockerswarm_task_desired_state]
+        regex: running
+        action: keep
+
+      # Filter by service name
+      - source_labels: [__meta_dockerswarm_service_name]
+        regex: ".*_cadvisor|.*_nodeexporter"
+        action: keep
+
+      # Exclude ingress (you had `action: keep`, which включал их!)
+      - source_labels: [__meta_dockerswarm_network_name]
+        regex: ".*ingress.*"
+        action: keep
+
+      # Overwrite __address__ based on service name
+      - source_labels:
+          [__meta_dockerswarm_service_name, __meta_dockerswarm_node_address]
+        regex: (.*_nodeexporter);(.*)
+        target_label: __address__
+        replacement: "$2:9100"
+
+      - source_labels:
+          [__meta_dockerswarm_service_name, __meta_dockerswarm_node_address]
+        regex: (.*_cadvisor);(.*)
+        target_label: __address__
+        replacement: "$2:8081"
+
+      # # Make instance label unique (hostname:port)
+      # - source_labels: [__meta_dockerswarm_node_hostname, __address__]
+      #   separator: ":"
+      #   target_label: instance
+      #   replacement: "$1:$2"
+
+      # Set hostname as instance label
+      - source_labels: [__meta_dockerswarm_node_hostname]
+        target_label: instance
+
+      # Optional: сохраняем ID ноды для удобства
+      - source_labels: [__meta_dockerswarm_node_id]
+        target_label: node_id
+
   - job_name: "prometheus"
     scrape_interval: 20s
     static_configs:
@@ -78,7 +125,7 @@ scrape_configs:
 
   - job_name: "postgres"
     static_configs:
-      - targets: ["192.168.150.58:9187"]
+      - targets: ["10.163.1.5:9187"]
 
 #  - job_name: 'pushgateway'
 #    scrape_interval: 10s
