--- a/docker-fluentbit/fluent-bit.conf
+++ b/docker-fluentbit/fluent-bit.conf
@@ -1,23 +1,23 @@
 [SERVICE]
     Flush        5
     Log_Level    info
+    Parsers_File /fluent-bit/etc/parsers.conf
 
 [INPUT]
     Name         tail
     Path         /var/lib/docker/containers/*/*.log
+    Exclude_Path  /var/lib/docker/containers/*_fluentd-*.log
     Parser       docker
     Tag          swarm.*
     Refresh_Interval 5
     Mem_Buf_Limit 10MB
     Skip_Long_Lines On
-    DB           /var/log/flb_swarmlogs.db
+    #DB           /fluent-bit/db/flb_swarmlogs.db
 
-[PARSER]
-    Name         docker
-    Format       json
-    Time_Key     time
-    Time_Format  %Y-%m-%dT%H:%M:%S.%L
-    Time_Keep    On
+[FILTER]
+    Name         grep
+    Match        swarm.*
+    Exclude      container_name  ^(fluentd|fluent-bit|portainer)
 
 [OUTPUT]
     Name         forward
