--- a/docker-opensearch/docker-compose.yml
+++ b/docker-opensearch/docker-compose.yml
@@ -2,20 +2,31 @@ version: "3.8"
 
 services:
   opensearch:
-    image: opensearchproject/opensearch:2.19.0
-    container_name: opensearch
+    image: opensearchproject/opensearch:2.9.0
     deploy:
       placement:
         constraints:
           - "node.role==worker"
+          - "node.labels.platform==vmware"
+    env_file:
+      - .env
     environment:
       - discovery.type=single-node
-      - plugins.security.disabled=true
       - cluster.name=opensearch-cluster
       - node.name=opensearch-node
       - bootstrap.memory_lock=true
+      - plugins.security.ssl.transport.pemcert_filepath=/usr/share/opensearch/data/config/certs/node.pem
+      - plugins.security.ssl.transport.pemkey_filepath=/usr/share/opensearch/data/config/certs/node.key
+      - plugins.security.ssl.transport.pemtrustedcas_filepath=/usr/share/opensearch/data/config/certs/ca.pem
+      - plugins.security.ssl.transport.enforce_hostname_verification=false
+      - plugins.security.ssl.transport.enabled=true
+      - plugins.security.ssl.http.enabled=true
+      - plugins.security.ssl.http.pemcert_filepath=/usr/share/opensearch/data/config/certs/node.pem
+      - plugins.security.ssl.http.pemkey_filepath=/usr/share/opensearch/data/config/certs/node.key
+      - plugins.security.ssl.http.pemtrustedcas_filepath=/usr/share/opensearch/data/config/certs/ca.pem
       - "OPENSEARCH_JAVA_OPTS=-Xms512m -Xmx512m"
-      - OPENSEARCH_INITIAL_ADMIN_PASSWORD=${OPENSEARCH_INITIAL_ADMIN_PASSWORD}
+      - "DISABLE_SECURITY_PLUGIN=false"
+      - "DISABLE_INSTALL_DEMO_CONFIG=true"
     ulimits:
       memlock:
         soft: -1
@@ -27,16 +38,22 @@ services:
       - opensearch-net
     volumes:
       - opensearch-data:/usr/share/opensearch/data
+      # - opensearch-certs:/usr/share/opensearch/data/config/certs
 
   dashboards:
-    image: opensearchproject/opensearch-dashboards:2.14.0
-    container_name: opensearch-dashboards
+    image: opensearchproject/opensearch-dashboards:2.9.0
     ports:
       - 5601:5601
+    env_file:
+      - .env
     environment:
-      - OPENSEARCH_HOSTS=http://opensearch:9200
+      - OPENSEARCH_HOSTS=https://opensearch:9200
+      - OPENSEARCH_SSL_VERIFICATIONMODE=none
+      - SERVER_SSL_ENABLED=false
     depends_on:
       - opensearch
+    networks:
+      - opensearch-net
 
 volumes:
   opensearch-data:
@@ -45,6 +62,12 @@ volumes:
       type: "none"
       o: "bind"
       device: "/data/opensearch_data"
+  opensearch-certs:
+    driver: local
+    driver_opts:
+      type: "none"
+      o: "bind"
+      device: "/data/opensearch_certs"
 
 networks:
   opensearch-net:
