--- a/docker-opensearch/docker-compose.yml
+++ b/docker-opensearch/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - cluster.name=opensearch-cluster
       - node.name=opensearch-node
       - bootstrap.memory_lock=true
+      - plugins.security.restapi.roles_enabled=["all_access","security_rest_api_access"]
       - plugins.security.ssl.transport.pemcert_filepath=/usr/share/opensearch/data/config/certs/node.pem
       - plugins.security.ssl.transport.pemkey_filepath=/usr/share/opensearch/data/config/certs/node.key
       - plugins.security.ssl.transport.pemtrustedcas_filepath=/usr/share/opensearch/data/config/certs/ca.pem
