--- a/docker-gateway/gateway/nginx.conf
+++ b/docker-gateway/gateway/nginx.conf
@@ -2,9 +2,15 @@ server {
     listen 80;
     server_name jenkins.srvxapp.com;  
 
+    real_ip_header CF-Connecting-IP;
+
+    set_real_ip_from 10.0.5.0/24; 
+
     location / {
-        proxy_pass http://jenkins:8080;  
+        proxy_pass http://jenkins_jenkins:8080;  
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
