--- a/docker-zabbix/docker-compose-nopsql.yml
+++ b/docker-zabbix/docker-compose-nopsql.yml
@@ -49,6 +49,7 @@ services:
       - "10051:10051"
     networks:
       - zabbix-net
+      - gw_net
     depends_on:
       - postgres-zabbix
     stop_grace_period: 30s
@@ -154,6 +155,7 @@ services:
       - zabbix-server
     networks:
       - zabbix-net
+      - gw_net
     labels:
       com.zabbix.description: "Zabbix frontend on Nginx web-server with PostgreSQL database support"
       com.zabbix.company: "Zabbix LLC"
@@ -167,6 +169,9 @@ networks:
     driver: overlay
     driver_opts:
       com.docker.network.enable_ipv6: "false"
+  gw_net:
+    external: true
+    name: gateway_gw_net
 
 secrets:
   POSTGRES_USER:
