--- a/docker-gateway/docker-compose.yaml
+++ b/docker-gateway/docker-compose.yaml
@@ -3,7 +3,10 @@ version: "3.8"
 services:
   gateway:
     image: "jc21/nginx-proxy-manager:${NGINX_PXY_MANAGER_TAG:-latest}"
-    restart: always
+    restart: unless-stopped
+    environment:
+      PUID: 1000
+      PGID: 1000
     ports:
       - "80:80"
       - "81:81"
