Temporary disable volume

--- a/docker-zabbix/docker-compose-nopsql.yml
+++ b/docker-zabbix/docker-compose-nopsql.yml
@@ -77,7 +77,7 @@ services:
         protocol: tcp
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - /etc/zabbix:/etc/zabbix/zabbix_agentd.d:ro
+      # - /etc/zabbix:/etc/zabbix/zabbix_agentd.d:ro
     tmpfs: /tmp
     deploy:
       mode: global
