--- a/docker-portainer/portainer-agent-stack.yml
+++ b/docker-portainer/portainer-agent-stack.yml
@@ -26,7 +26,7 @@ services:
       - portainer_data:/data
     networks:
       - agent_network
-      - gw_net
+      - gateway_gw_net
     deploy:
       mode: replicated
       replicas: 1
@@ -37,9 +37,8 @@ networks:
   agent_network:
     driver: overlay
     attachable: true
-  gw_net:
+  gateway_gw_net:
     external: true
-    name: gateway_gw_net
 
 volumes:
   portainer_data:
