--- a/docker-monitoring/Jenkinsfile
+++ b/docker-monitoring/Jenkinsfile
@@ -3,8 +3,13 @@
 def deployExecuted = false
 
 pipeline {
-    agent { label 'swarm && local' } // Ensure the agent has Docker and Swarm mode enabled
-    
+
+    agent { label 'cloud && hetzner' } // Ensure the agent has Docker and Swarm mode enabled
+
+    parameters {
+        booleanParam(name: 'FORCE_REDEPLOY', defaultValue: false, description: 'Force redeployment of stack even if no changes detected')
+    }
+
     environment {
         // Define environment variables for the stack
         DOCKER_STACK_NAME = 'monitoring'
@@ -30,7 +35,10 @@ pipeline {
 
         stage('Create Files') {
              when {
-                changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
+                anyOf {
+                    changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
+                    expression { params.FORCE_REDEPLOY }
+                }
              }
             steps {
                 script {
@@ -53,7 +61,10 @@ pipeline {
 
         stage('Deploy Monitoring Stack') {
              when {
-                changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
+                anyOf {
+                    changeset "**/${env.DOCKER_COMPOSE_DIR}/**"
+                    expression { params.FORCE_REDEPLOY }
+                }
              }
             steps {                
                 script {
