--- a/docker-monitoring/docker-compose.yml
+++ b/docker-monitoring/docker-compose.yml
@@ -22,6 +22,7 @@ services:
           memory: 256M
     networks:
       - monitoring_net
+      - gateway_gw_net
     labels:
       org.label-schema.group: "monitoring"
 
