--- a/docker-zabbix/docker-compose-nopsql.yml
+++ b/docker-zabbix/docker-compose-nopsql.yml
@@ -7,6 +7,7 @@ services:
       - 9187:9187
     networks:
       - zabbix-net
+      - monitoring_net
     env_file:
       - start.env
     environment:
@@ -169,6 +170,9 @@ networks:
   gw_net:
     external: true
     name: gateway_gw_net
+  monitoring_net:
+    external: true
+    name: monitoring_monitoring_net
 
 secrets:
   POSTGRES_USER:
