--- a/docker-monitoring/prometheus/rules/alert.rules.yml
+++ b/docker-monitoring/prometheus/rules/alert.rules.yml
@@ -1,50 +1,197 @@
 groups:
-  - name: targets
-    rules:
-      - alert: monitor_service_down
-        expr: up == 0
-        for: 3m
-        labels:
-          severity: critical
-        annotations:
-          summary: "Monitor service non-operational"
-          description: "Service {{ $labels.instance }} is down."
 
-  - name: host
-    rules:
-      - alert: high_cpu_load
-        expr: node_load1 > 1.5
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "Server under high load"
-          description: "Docker host is under high load, the avg load 1m is at {{ $value}}. Reported by instance {{ $labels.instance }} of job {{ $labels.job }}."
+###############################################################################
+# TARGET AVAILABILITY
+###############################################################################
+- name: targets
+  rules:
 
-      - alert: high_memory_load
-        expr: (sum(node_memory_MemTotal_bytes) - sum(node_memory_MemFree_bytes + node_memory_Buffers_bytes + node_memory_Cached_bytes) ) / sum(node_memory_MemTotal_bytes) * 100 > 85
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "Server memory is almost full"
-          description: "Docker host memory usage is {{ humanize $value}}%. Reported by instance {{ $labels.instance }} of job {{ $labels.job }}."
+  - alert: ServiceDown
+    expr: up == 0
+    for: 3m
+    labels:
+      severity: critical
+      category: availability
+      team: platform
+    annotations:
+      summary: "Service down: {{ $labels.job }}"
+      description: "Instance {{ $labels.instance }} (job={{ $labels.job }}) is not responding."
 
-      - alert: high_storage_load
-        expr: (node_filesystem_size_bytes{fstype="aufs"} - node_filesystem_free_bytes{fstype="aufs"}) / node_filesystem_size_bytes{fstype="aufs"}  * 100 > 85
-        for: 5m
-        labels:
-          severity: warning
-        annotations:
-          summary: "Server storage is almost full"
-          description: "Docker host storage usage is {{ humanize $value}}%. Reported by instance {{ $labels.instance }} of job {{ $labels.job }}."
-# ALERT cadvisor_absent
-#   IF up{instance="cadvisor:8080"}==0
-#   FOR 5s
-#   LABELS {
-#     severity="page"
-#   }
-#   ANNOTATIONS {
-#   SUMMARY= "Instance {{$labels.instance}} down",
-#   DESCRIPTION= "Instance= {{$labels.instance}}, Service/Job ={{$labels.job}} is down for more than 5 sec."
-#   }
+  - alert: ExporterFlapping
+    expr: changes(up[10m]) > 4
+    for: 5m
+    labels:
+      severity: warning
+      category: availability
+      team: platform
+    annotations:
+      summary: "Exporter flapping"
+      description: "{{ $labels.instance }} exporter is unstable."
+
+###############################################################################
+# CPU
+###############################################################################
+- name: host_cpu
+  rules:
+
+  - alert: HighCPULoadWarning
+    expr: node_load1 / count by (instance) (node_cpu_seconds_total{mode="idle"}) > 0.8
+    for: 5m
+    labels:
+      severity: warning
+      category: resource
+      team: platform
+    annotations:
+      summary: "High CPU load"
+      description: "CPU load is {{ printf \"%.2f\" $value }} on {{ $labels.instance }}."
+
+  - alert: HighCPULoadCritical
+    expr: node_load1 / count by (instance) (node_cpu_seconds_total{mode="idle"}) > 1.2
+    for: 5m
+    labels:
+      severity: critical
+      category: resource
+      team: platform
+    annotations:
+      summary: "CPU saturation"
+      description: "CPU load is critically high: {{ printf \"%.2f\" $value }} on {{ $labels.instance }}."
+
+###############################################################################
+# MEMORY
+###############################################################################
+- name: host_memory
+  rules:
+
+  - alert: HighMemoryUsageWarning
+    expr: (1 - node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes) * 100 > 85
+    for: 5m
+    labels:
+      severity: warning
+      category: resource
+      team: platform
+    annotations:
+      summary: "High memory usage"
+      description: "Memory usage is {{ humanize $value }}% on {{ $labels.instance }}."
+
+  - alert: HighMemoryUsageCritical
+    expr: (1 - node_memory_MemAvailable_bytes / node_memory_MemTotal_bytes) * 100 > 95
+    for: 5m
+    labels:
+      severity: critical
+      category: resource
+      team: platform
+    annotations:
+      summary: "Memory exhaustion risk"
+      description: "Memory usage is {{ humanize $value }}% on {{ $labels.instance }}."
+
+  - alert: MemoryPressure
+    expr: rate(node_vmstat_pgmajfault[5m]) > 100
+    for: 5m
+    labels:
+      severity: warning
+      category: performance
+      team: platform
+    annotations:
+      summary: "Memory pressure detected"
+      description: "Major page faults increasing on {{ $labels.instance }}."
+
+###############################################################################
+# DISK
+###############################################################################
+- name: host_disk
+  rules:
+
+  - alert: HighDiskUsageWarning
+    expr: |
+      (node_filesystem_size_bytes{fstype!~"tmpfs|overlay"} -
+       node_filesystem_avail_bytes{fstype!~"tmpfs|overlay"})
+      /
+      node_filesystem_size_bytes{fstype!~"tmpfs|overlay"} * 100 > 85
+    for: 5m
+    labels:
+      severity: warning
+      category: resource
+      team: platform
+    annotations:
+      summary: "Disk usage high"
+      description: "{{ $labels.mountpoint }} on {{ $labels.instance }} is {{ humanize $value }}% full."
+
+  - alert: HighDiskUsageCritical
+    expr: |
+      (node_filesystem_size_bytes{fstype!~"tmpfs|overlay"} -
+       node_filesystem_avail_bytes{fstype!~"tmpfs|overlay"})
+      /
+      node_filesystem_size_bytes{fstype!~"tmpfs|overlay"} * 100 > 95
+    for: 5m
+    labels:
+      severity: critical
+      category: resource
+      team: platform
+    annotations:
+      summary: "Disk almost full"
+      description: "{{ $labels.mountpoint }} on {{ $labels.instance }} is {{ humanize $value }}% full."
+
+  - alert: InodeExhaustion
+    expr: node_filesystem_files_free / node_filesystem_files < 0.1
+    for: 10m
+    labels:
+      severity: warning
+      category: resource
+      team: platform
+    annotations:
+      summary: "Inode exhaustion risk"
+      description: "{{ $labels.mountpoint }} on {{ $labels.instance }} is running out of inodes."
+
+  - alert: FilesystemReadonly
+    expr: node_filesystem_readonly == 1
+    labels:
+      severity: critical
+      category: availability
+      team: platform
+    annotations:
+      summary: "Filesystem became read-only"
+      description: "{{ $labels.mountpoint }} on {{ $labels.instance }} is read-only."
+
+###############################################################################
+# NETWORK
+###############################################################################
+- name: host_network
+  rules:
+
+  - alert: NetworkErrors
+    expr: rate(node_network_receive_errs_total[5m]) > 0
+    for: 5m
+    labels:
+      severity: warning
+      category: network
+      team: platform
+    annotations:
+      summary: "Network receive errors"
+      description: "Network errors detected on {{ $labels.device }} at {{ $labels.instance }}."
+
+  - alert: NetworkDrops
+    expr: rate(node_network_receive_drop_total[5m]) > 0
+    for: 5m
+    labels:
+      severity: warning
+      category: network
+      team: platform
+    annotations:
+      summary: "Network packet drops"
+      description: "Packet drops detected on {{ $labels.device }} at {{ $labels.instance }}."
+
+###############################################################################
+# NODE STABILITY
+###############################################################################
+- name: host_stability
+  rules:
+
+  - alert: NodeRebootDetected
+    expr: changes(node_boot_time_seconds[15m]) > 0
+    labels:
+      severity: warning
+      category: stability
+      team: platform
+    annotations:
+      summary: "Node reboot detected"
+      description: "{{ $labels.instance }} rebooted recently."
